src/test/ui/suggestions/dont-suggest-pin-array-dot-set.stderr
error[E0599]: no method named `set` found for array `[u8; 1]` in the current scope
  --> $DIR/dont-suggest-pin-array-dot-set.rs:14:7
   |
LL |     a.set(0, 3);
   |       ^^^ help: there is a method with a similar name: `get`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
